создание блока services в блоке main

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <title>Startup</title>
 </head>
 
 <body>
     <header class="header">
         <div class="head-wrp">
-            <p class="header-brand">startup</p>
+            <a href="#" class="header-brand">startup</a>
             <ul class="header-menu">
                 <li class="menu-item">
                     <a href="#" class="menu-item-txt">Home</a>
@@ -38,7 +40,19 @@
         <h2 class="header-blc-headline">Welcome to STARTUP</h2>
         <p class="header-blc-txt">Your Favourite Creative Agency Template</p>
         <a href="#" class="header-blc-btn">Get Started</a>
+
+
+
+
     </header>
+    <div class="services">
+        <h2 class="blc-title">Services</h2>
+        <p class="services-txt">We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+        <div class="services-blc">
+            <p class="services-blc-title">Clean Typography</p>
+            <p class="services-blc-txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+        </div>
+    </div>
 </body>
 
 </html>
